3rd SEM/OOPS/JAVA/School Programs JAVA/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\hamcrest-library-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\AKY BOY\Desktop\aky\School prog
-d
C:\Users\AKY BOY\Desktop\aky\School prog\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\AKY BOY\Desktop\aky\School prog\Record.java
<---- end of javadoc command ---->
Loading source file C:\Users\AKY BOY\Desktop\aky\School prog\Record.java...
Constructing Javadoc information...
Standard Doclet version 11.0.10
Building tree for all the packages and classes...
Generating C:\Users\AKY BOY\Desktop\aky\School prog\doc\Record.html...
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:2: error: '{' expected
public class  sada
                  ^
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:4: error: <identifier> expected
System.out.println("1. Last Entered");  System.out.println("2. Add New");  
                  ^
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:4: error: illegal start of type
System.out.println("1. Last Entered");  System.out.println("2. Add New");  
                   ^
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:4: error: <identifier> expected
System.out.println("1. Last Entered");  System.out.println("2. Add New");  
                                                          ^
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:4: error: illegal start of type
System.out.println("1. Last Entered");  System.out.println("2. Add New");  
                                                           ^
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:5: error: <identifier> expected
System.out.println("3. List All");  
                  ^
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:5: error: illegal start of type
System.out.println("3. List All");  
                   ^
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:6: error: <identifier> expected
System.out.print("Enter your choice: ");  
                ^
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:6: error: illegal start of type
System.out.print("Enter your choice: ");  
                 ^
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:8: error: illegal start of type
switch(choice) 
^
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:8: error: <identifier> expected
switch(choice) 
             ^
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:10: error: orphaned case
case 1:  
^
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:24: error: class, interface, or enum expected
}
^
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:4: error: cannot find symbol
System.out.println("1. Last Entered");  System.out.println("2. Add New");  
      ^
  symbol:   class out
  location: class System
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:4: error: cannot find symbol
System.out.println("1. Last Entered");  System.out.println("2. Add New");  
                                              ^
  symbol:   class out
  location: class System
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:5: error: cannot find symbol
System.out.println("3. List All");  
      ^
  symbol:   class out
  location: class System
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:6: error: cannot find symbol
System.out.print("Enter your choice: ");  
      ^
  symbol:   class out
  location: class System
C:\Users\AKY BOY\Desktop\aky\School prog\sada.java:8: error: cannot find symbol
switch(choice) 
       ^
  symbol:   class choice
  location: class sada
C:\Users\AKY BOY\Desktop\aky\School prog\Boo.java:1: error: class Book is public, should be declared in a file named Book.java
public class Book
       ^
Generating C:\Users\AKY BOY\Desktop\aky\School prog\doc\package-summary.html...
Generating C:\Users\AKY BOY\Desktop\aky\School prog\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\AKY BOY\Desktop\aky\School prog\doc\allclasses.html...
Generating C:\Users\AKY BOY\Desktop\aky\School prog\doc\allclasses.html...
Generating C:\Users\AKY BOY\Desktop\aky\School prog\doc\index.html...
19 errors
